# signalloop

./: .env.example  .env.local.example  .env.render-supabase.example  .gitignore  AGENTS.md  AUTHORS.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  CURRENT_STATE.md  LICENSE  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  render.yaml
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_create_core_tables.py  (+11 more)
apps/api/signalloop_api/: __init__.py  adaptive.py  adaptive_blueprint.py  admin.py  ai.py  ai_policy.py  ai_provider.py  assessment_files.py  attempts.py  audit.py  auth.py  config.py  database.py  document_text.py  execution.py  integrity_config.py  main.py  models.py  proctoring.py  question_bank_ingestion.py  question_bank_seed.py  rate_limit.py  report_advisory.py  reports.py  schemas.py  submissions.py  timebox.py
apps/api/tests/: conftest.py  test_adaptive_assessment.py  test_admin_endpoints.py  test_ai_endpoint.py  test_ai_output_guard.py  test_ai_policy.py  test_ai_provider.py  test_assessment_taxonomy.py  test_attempt_lifecycle.py  test_auth_email_resolution.py  test_config.py  test_cors.py  test_employer_isolation.py  test_evidence_report.py  test_execution.py  test_final_submission.py  test_health.py  test_live_ai_policy.py  test_models.py  test_proctoring_events.py  test_question_bank_ingestion.py  test_rate_limit.py  test_schema_health.py  test_submission_scenarios.py  test_two_step_pipeline.py  test_unified_integrity_score.py  test_webcam_consent.py
apps/worker/: README.md  pyproject.toml
apps/worker/docker/: python-assessment.Dockerfile
apps/worker/signalloop_worker/: __init__.py  main.py  runner.py  schemas.py  workspace.py
apps/worker/tests/: test_api.py  test_runner.py  test_workspace.py
(+165 files in other folders)
