[project]
name = "signalloop-api"
version = "0.1.0"
description = "SignalLoop MVP backend API"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.14.0",
    "boto3==1.35.90",
    "email-validator==2.2.0",
    "fastapi==0.115.6",
    "httpx==0.27.2",
    "psycopg[binary]==3.2.3",
    "pydantic==2.10.4",
    "pytest==8.3.4",
    "sqlalchemy==2.0.36",
    "uvicorn==0.34.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
