[project]
name = "signalloop-worker"
version = "0.1.0"
description = "SignalLoop Docker execution worker"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "httpx==0.27.2",
    "pydantic==2.10.4",
    "pytest==8.3.4",
    "uvicorn==0.34.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
